test/__snapshots__/loader.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should emit asset using the "messages" API: errors 1`] = `Array []`;

exports[`loader should emit asset using the "messages" API: warnings 1`] = `Array []`;

exports[`loader should emit warning using the "messages" API: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`loader should emit warning using the "messages" API: errors 1`] = `Array []`;

exports[`loader should emit warning using the "messages" API: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(10:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(29:5) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(2:3) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(32:7) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(36:7) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:5) <Message>",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(6:3) <Message>",
]
`;

exports[`loader should reuse PostCSS AST: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`loader should reuse PostCSS AST: errors 1`] = `Array []`;

exports[`loader should reuse PostCSS AST: warnings 1`] = `Array []`;

exports[`loader should throw an error on invalid syntax: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
SyntaxError

(1:3) Unnecessary curly bracket

> 1 | a {
    |   ^
  2 |   color: black;
  3 | }
",
]
`;

exports[`loader should throw an error on invalid syntax: warnings 1`] = `Array []`;

exports[`loader should work with SugarSS: css 1`] = `
"a {
  color: black
}
"
`;

exports[`loader should work with SugarSS: errors 1`] = `Array []`;

exports[`loader should work with SugarSS: warnings 1`] = `Array []`;

exports[`loader should work: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`loader should work: errors 1`] = `Array []`;

exports[`loader should work: warnings 1`] = `Array []`;
